// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders correctly 1`] = `
<div
  className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz"
>
  <div
    aria-live="polite"
    className="css-cursor-18t94o4 css-view-1dbjc4n r-backgroundColor-1niwhzg r-borderRadius-6ncur5 r-cursor-1loqt21 r-touchAction-1otgn73 r-userSelect-lrvibr"
    data-focusable={true}
    disabled={false}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      Object {
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
    tabIndex="0"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(0,0,0,0.54)",
          "borderBottomLeftRadius": "10px",
          "borderBottomRightRadius": "10px",
          "borderBottomWidth": "2px",
          "borderLeftColor": "rgba(0,0,0,0.54)",
          "borderLeftWidth": "2px",
          "borderRightColor": "rgba(0,0,0,0.54)",
          "borderRightWidth": "2px",
          "borderTopColor": "rgba(0,0,0,0.54)",
          "borderTopLeftRadius": "10px",
          "borderTopRightRadius": "10px",
          "borderTopWidth": "2px",
          "height": "20px",
          "marginBottom": "8px",
          "marginLeft": "8px",
          "marginRight": "8px",
          "marginTop": "8px",
          "width": "20px",
        }
      }
    />
  </div>
</div>
`;

exports[`Button Renders correctly radio button component with label 1`] = `
<div
  className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz"
>
  <div
    aria-live="polite"
    className="css-cursor-18t94o4 css-view-1dbjc4n r-backgroundColor-1niwhzg r-borderRadius-6ncur5 r-cursor-1loqt21 r-touchAction-1otgn73 r-userSelect-lrvibr"
    data-focusable={true}
    disabled={false}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      Object {
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
    tabIndex="0"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(0,0,0,0.54)",
          "borderBottomLeftRadius": "10px",
          "borderBottomRightRadius": "10px",
          "borderBottomWidth": "2px",
          "borderLeftColor": "rgba(0,0,0,0.54)",
          "borderLeftWidth": "2px",
          "borderRightColor": "rgba(0,0,0,0.54)",
          "borderRightWidth": "2px",
          "borderTopColor": "rgba(0,0,0,0.54)",
          "borderTopLeftRadius": "10px",
          "borderTopRightRadius": "10px",
          "borderTopWidth": "2px",
          "height": "20px",
          "marginBottom": "8px",
          "marginLeft": "8px",
          "marginRight": "8px",
          "marginTop": "8px",
          "width": "20px",
        }
      }
    />
  </div>
  <div
    className="css-text-76zvg2 r-marginLeft-1n0xq6e"
    dir="auto"
  >
    First
  </div>
</div>
`;

exports[`Button Renders correctly radio button component with status true 1`] = `
<div
  className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz"
>
  <div
    aria-live="polite"
    className="css-cursor-18t94o4 css-view-1dbjc4n r-backgroundColor-1niwhzg r-borderRadius-6ncur5 r-cursor-1loqt21 r-touchAction-1otgn73 r-userSelect-lrvibr"
    data-focusable={true}
    disabled={false}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      Object {
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
    tabIndex="0"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(0,0,0,1.00)",
          "borderBottomLeftRadius": "10px",
          "borderBottomRightRadius": "10px",
          "borderBottomWidth": "2px",
          "borderLeftColor": "rgba(0,0,0,1.00)",
          "borderLeftWidth": "2px",
          "borderRightColor": "rgba(0,0,0,1.00)",
          "borderRightWidth": "2px",
          "borderTopColor": "rgba(0,0,0,1.00)",
          "borderTopLeftRadius": "10px",
          "borderTopRightRadius": "10px",
          "borderTopWidth": "2px",
          "height": "20px",
          "marginBottom": "8px",
          "marginLeft": "8px",
          "marginRight": "8px",
          "marginTop": "8px",
          "width": "20px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-bottom-1p0dtai r-justifyContent-1777fci r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af"
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitTransform": "scale(1)",
              "backgroundColor": "rgba(0,0,0,1.00)",
              "borderBottomLeftRadius": "5px",
              "borderBottomRightRadius": "5px",
              "borderTopLeftRadius": "5px",
              "borderTopRightRadius": "5px",
              "height": "10px",
              "transform": "scale(1)",
              "width": "10px",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="css-text-76zvg2 r-marginLeft-1n0xq6e"
    dir="auto"
  >
    First
  </div>
</div>
`;
